--- a/src/client/resources/assets/nucleus/lang/en_us.json
+++ b/src/client/resources/assets/nucleus/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+    "font.minecraft.default": "Minecraftia",
     "font.minecraft.alt": "Standard Galactic Alphabet",
     "font.minecraft.illageralt": "Illager Rune",
 
@@ -6,7 +7,8 @@
     "dimension.minecraft.the_nether": "The Nether",
     "dimension.minecraft.the_end": "The End",
 
-    "ui.nucleus.when_eaten": "When Eaten:",
-    "ui.nucleus.soulbound": "Soulbound",
-    "ui.nucleus.font_changing": "Use %s on a sign to write in %s"
+    "item.nucleus.when_eaten": "When Eaten:",
+    "item.nucleus.soulbound": "Soulbound",
+    "item.nucleus.font_changing": "Use %s on a sign to write in %s",
+    "item.nucleus.bound_location": "%s (%i, %i, %i)"
 }
