mod specific item tooltips

--- a/src/client/resources/assets/nucleus/lang/en_us.json
+++ b/src/client/resources/assets/nucleus/lang/en_us.json
@@ -2,6 +2,7 @@
     "font.minecraft.default": "Minecraftia",
     "font.minecraft.alt": "Standard Galactic Alphabet",
     "font.minecraft.illageralt": "Illager Rune",
+    "font.minecraft.five": "Five",
 
     "dimension.minecraft.overworld": "Overworld",
     "dimension.minecraft.the_nether": "The Nether",
