looooooots of changes

--- a/src/testmod/resources/assets/golgi/lang/en_us.json
+++ b/src/testmod/resources/assets/golgi/lang/en_us.json
@@ -1,4 +1,5 @@
 {
 	"item.golgi.illager_rune": "Illager Rune",
-	"item.golgi.redstone_tracker": "Redstone Tracker"
+	"item.golgi.redstone_tracker": "Redstone Tracker",
+	"item.golgi.breadstick_basket": "Breadstick Basket"
 }
